--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Env (secrets)
+.env
+.env.local
+.env.*.local
+
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -15,3 +20,4 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+/.idea
